<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="app_toolbar_title">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_header">My Nanodegree Apps!</string>

    <string name="button_spotify">spotify streamer</string>
    <string name="button_scores">scores app</string>
    <string name="button_library">library app</string>
    <string name="button_build">build it bigger</string>
    <string name="button_xyz">xyz reader</string>
    <string name="button_capstone">capstone: my own app</string>
</resources>
